--- a/client/login.html
+++ b/client/login.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="sty    <footer class="footer">
-      <span class="title">&copy;</span>2025 MENTALHEALTH. All rights reserved.
-    </footer>
-
-    <!-- Organized JavaScript Files -->
-    <script src="js/utils.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/navigation.js"></script>
-    <script src="js/notifications.js"></script>
-    <script src="js/sidebar.js"></script>
-    <script src="js/main.js"></script>
-  </body>
-</html>" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Login</title>
   </head>
   <body>
@@ -67,6 +55,12 @@
       <span class="title">&copy;</span>2025 MENTALHEALTH. All rights reserved.
     </footer>
 
-    <script src="script.js"></script>
+    <!-- Organized JavaScript Files -->
+    <script src="js/utils.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/navigation.js"></script>
+    <script src="js/notifications.js"></script>
+    <script src="js/sidebar.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
