All the functionalities are working

--- a/client/index.html
+++ b/client/index.html
@@ -53,7 +53,7 @@
               class="hero-slider-btn hero-slider-btn-left"
               aria-label="Previous Slide"
             >
-              &#8592;
+              <i class="fas fa-chevron-left"></i>
             </button>
             <button
               type="button"
@@ -61,7 +61,7 @@
               class="hero-slider-btn hero-slider-btn-right"
               aria-label="Next Slide"
             >
-              &#8594;
+              <i class="fas fa-chevron-right"></i>
             </button>
           </div>
 
@@ -177,7 +177,7 @@
             <h3 class="services-title">Our <span class="accent">Services</span></h3>
             <div class="services-grid">
               <div class="service-item">
-                <div class="service-icon">🧑‍🤝‍🧑</div>
+                <div class="service-icon"><i class="fas fa-users"></i></div>
                 <h4 class="service-title">Mental Health Awareness</h4>
                 <p class="service-desc">
                   Learn about stress, anxiety, depression, and other mental health
@@ -185,7 +185,7 @@
                 </p>
               </div>
               <div class="service-item">
-                <div class="service-icon">📞</div>
+                <div class="service-icon"><i class="fas fa-phone-volume"></i></div>
                 <h4 class="service-title">24/7 Resources & Support</h4>
                 <p class="service-desc">
                   Find expert tips, coping strategies, and emergency contacts for
@@ -193,7 +193,7 @@
                 </p>
               </div>
               <div class="service-item">
-                <div class="service-icon">📊</div>
+                <div class="service-icon"><i class="fas fa-chart-line"></i></div>
                 <h4 class="service-title">Smart Mood Tracking</h4>
                 <p class="service-desc">
                   Monitor your mood and well-being over time with intelligent insights
@@ -201,7 +201,7 @@
                 </p>
               </div>
               <div class="service-item">
-                <div class="service-icon">💬</div>
+                <div class="service-icon"><i class="fas fa-comments"></i></div>
                 <h4 class="service-title">Professional Support</h4>
                 <p class="service-desc">
                   Connect with licensed professionals and peer support groups in
@@ -252,7 +252,7 @@
             </div>
               <ul class="contact-info-list">
                 <li class="contact-info-item">
-                  <span class="contact-info-icon">📧</span>
+                  <span class="contact-info-icon"><i class="fas fa-envelope"></i></span>
                   <div class="contact-info-text">
                     <span class="contact-info-label accent">Email:</span>
                     <a
@@ -263,7 +263,7 @@
                   </div>
                 </li>
                 <li class="contact-info-item">
-                  <span class="contact-info-icon">📞</span>
+                  <span class="contact-info-icon"><i class="fas fa-phone"></i></span>
                   <div class="contact-info-text">
                     <span class="contact-info-label accent">Phone:</span>
                     <a href="tel:0704991866" class="contact-info-link"
@@ -272,7 +272,7 @@
                   </div>
                 </li>
                 <li class="contact-info-item">
-                  <span class="contact-info-icon">📍</span>
+                  <span class="contact-info-icon"><i class="fas fa-map-marker-alt"></i></span>
                   <div class="contact-info-text">
                     <span class="contact-info-label accent">Location:</span>
                     <span class="contact-info-link">Nairobi, Rongai</span>
