--- a/client/adminDashboard.html
+++ b/client/adminDashboard.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css?v=2.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
