Last commit before normaling the db

--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -23,7 +23,7 @@
           style="position: relative"
         >
           <!-- Notification Bell Icon -->
-          <i class="fa-solid fa-bell" style="font-size: 20px"></i>
+        <i class="fa-solid fa-bell" style="font-size: 20px"></i>
           <!-- Notification Badge -->
           <span
             id="notification-badge"
@@ -245,48 +245,6 @@
             </div>
           </section>
           <hr class="dashboard-hr" />
-
-          <!-- Upcoming Reminders -->
-          <section class="reminders">
-            <h3 class="dashboard-subtitle">Reminders & Goals</h3>
-            <div class="reminders-container">
-              <div class="reminder-card">
-                <div class="reminder-icon"><i class="fas fa-bullseye"></i></div>
-                <div class="reminder-content">
-                  <h4>Daily Goals</h4>
-                  <ul class="goals-list">
-                    <li>
-                      <label class="goal-item">
-                        <input type="checkbox" /> Complete mood check-in
-                      </label>
-                    </li>
-                    <li>
-                      <label class="goal-item">
-                        <input type="checkbox" /> Practice 10 minutes of
-                        mindfulness
-                      </label>
-                    </li>
-                    <li>
-                      <label class="goal-item">
-                        <input type="checkbox" /> Read one mental health article
-                      </label>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="reminder-card">
-                <div class="reminder-icon"><i class="fas fa-clock"></i></div>
-                <div class="reminder-content">
-                  <h4>Upcoming</h4>
-                  <ul class="reminders-list">
-                    <li>Evening reflection - 6:00 PM</li>
-                    <li>Weekly wellness check - Tomorrow</li>
-                    <li>Monthly progress review - In 2 weeks</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </section>
 
           <div class="scroll-indicator dashboard-scroll-indicator">
             <span><i class="fas fa-chevron-down"></i></span> Explore other
@@ -533,7 +491,12 @@
         <section id="resources" class="content-section content-section-hidden">
           <header class="resources-header">
             <h2 class="title resources-title">
-              <i class="fa-solid fa-phone"></i>&nbsp; Reliable<span class="accent"> Resources</span> & Contacts in <span class="accent">Kenya</span>
+              <i class="fa-solid fa-phone"></i>&nbsp; Reliable<span
+                class="accent"
+              >
+                Resources</span
+              >
+              & Contacts in <span class="accent">Kenya</span>
             </h2>
             <p class="resources-desc">
               Access trusted mental health resources, crisis support, and
@@ -801,7 +764,10 @@
         <section id="mood" class="content-section content-section-hidden">
           <header class="mood-header">
             <h2 class="title mood-title">
-              <i class="fas fa-heart"></i> Mood<span class="accent"> Tracking</span> Tools
+              <i class="fas fa-heart"></i> Mood<span class="accent">
+                Tracking</span
+              >
+              Tools
             </h2>
             <p class="mood-desc">
               Track your emotional well-being over time. Understanding your mood
@@ -1167,19 +1133,6 @@
           </section>
           <hr class="mood-hr" />
 
-          <!-- Mood Insights -->
-          <section class="mood-section">
-            <h3 class="accent mood-subtitle">Personalized Insights</h3>
-            <div id="moodInsightsContainer" class="mood-insights-container">
-              <!-- Insights will be loaded here dynamically -->
-              <div class="loading-message">
-                <i class="fa-solid fa-spinner fa-spin"></i>
-                <p>Analyzing your mood patterns...</p>
-              </div>
-            </div>
-          </section>
-          <hr class="mood-hr" />
-
           <!-- Mood History -->
           <section class="mood-section">
             <h3 class="accent mood-subtitle">Mood History</h3>
@@ -1296,7 +1249,9 @@
         </section>
         <section id="profile" class="content-section content-section-hidden">
           <header class="profile-header">
-            <h2 class="title profile-title">Your<span class="accent"> Profile</span></h2>
+            <h2 class="title profile-title">
+              Your<span class="accent"> Profile</span>
+            </h2>
             <p class="profile-desc">
               Manage your personal information, track your mental health
               journey, and customize your experience.
@@ -1622,7 +1577,9 @@
         <!-- Chat Section -->
         <section id="chat" class="content-section content-section-hidden">
           <header class="chat-header">
-            <h2 class="title chat-title">Chat with<span class="accent"> Therapists</span></h2>
+            <h2 class="title chat-title">
+              Chat with<span class="accent"> Therapists</span>
+            </h2>
             <p class="chat-desc">
               Connect and communicate directly with licensed mental health
               professionals for personalized support and guidance.
