--- a/client/userDashboard.html
+++ b/client/userDashboard.html
@@ -1210,7 +1210,7 @@
                           class="control-btn"
                           title="Video On/Off"
                         >
-                          <span class="control-icon">📹</span>
+                          <span class="control-icon"><i class="fas fa-video" style="font-size: 24px; color: black;"></i></span>
                         </button>
                         <button
                           id="endCallBtn"
@@ -1234,12 +1234,8 @@
                     class="btn btn-primary video-call-btn"
                     disabled
                   >
-                    <span class="btn-icon">📹</span>
+                    <span class="btn-icon"><i class="fas fa-video" style="font-size: 24px; color: black;"></i></span>
                     Start Video Call
-                  </button>
-                  <button id="requestCallBtn" class="btn btn-secondary">
-                    <span class="btn-icon">📞</span>
-                    Request Callback
                   </button>
                 </div>
               </div>
